# test_mipmaps_gamma_correction

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imgui_example_glfw_opengl3.cpp  imgui_impl_opengl3.cpp
src/: compare_images.cpp  main.cpp
